--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,19 @@
 
+name: CI/CD Setup!!
+
+on:
+  push:
+    branches:
+      -master
+
+jobs:
+  build:
+    runs-on:ubuntu-latest
+    steps:
+      -uses: actions/checkout@v2
+      -uses: actions/node@v2
+        with
+          node-version:'14'
+      -run: npm install
+      -run: npm run build
+      -run: npm run deploy
