--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,16 @@ name: CI/CD Setup!!
 on:
   push:
     branches:
-      -master
+      - master
 
 jobs:
   build:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       -uses: actions/checkout@v2
-      -uses: actions/node@v2
-        with
-          node-version:'14'
+      -uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       -run: npm install
       -run: npm run build
       -run: npm run deploy
